feat: add new api for statistic
