# src/shared/api/types/gen/index.ts
@@ -20,6 +20,7 @@ export * from './getInstrumentsByStrategyParams';
 export * from './getInstrumentsParams';
 export * from './getLatestSignalsParams';
 export * from './getNotesParams';
+export * from './getProfitChartParams';
 export * from './getRemindersParams';
 export * from './getResultByStrategyAndTradeCodeParams';
 export * from './getResultParams';
@@ -61,11 +62,14 @@ export * from './noteStatisticResponse';
 export * from './noteType';
 export * from './problemDetails';
 export * from './problemDetailsErrors';
+export * from './profitChartBucketResponse';
+export * from './profitChartGranularity';
 export * from './registerRequest';
 export * from './reminderResponse';
 export * from './reminderResponsePageResult';
 export * from './reminderSortField';
 export * from './reminderStatisticsResponse';
+export * from './signalDirection';
 export * from './signalResponse';
 export * from './signalResponsePageResult';
 export * from './signalSortField';
@@ -95,6 +99,7 @@ export * from './tradeCodeFileResponse';
 export * from './tradeCodeResponse';
 export * from './tradeCodeResponsePageResult';
 export * from './tradeCodeSortField';
+export * from './tradeDateRangeResponse';
 export * from './tradeRemind';
 export * from './tradeRemindRequest';
 export * from './tradeRemindStatistic';
